2012-05-07  Adam Barth  <abarth@webkit.org>

        [Chromium] Android wishes to use an empty implementation if AXObjectCache
        https://bugs.webkit.org/show_bug.cgi?id=85842

        Reviewed by Eric Seidel.

        Disable accessibility on OS(ANDROID) for PLATFORM(CHROMIUM).

        * wtf/Platform.h:

2012-05-04  Jeff Rogers  <jrogers@rim.com>

        [BlackBerry] Implement numberOfProcessorCores() for QNX
        https://bugs.webkit.org/show_bug.cgi?id=85638

        Reviewed by Antonio Gomes.

        * wtf/NumberOfCores.cpp:
        (WTF::numberOfProcessorCores):

2012-05-03  Yong Li  <yoli@rim.com>

        Mutex failure when HashTable is memory moved in debug build
        https://bugs.webkit.org/show_bug.cgi?id=84970

        Reviewed by Rob Buis.

        1. Replace m_mutex with OwnPtr<m_mutex> so HashTable is still
           memory movable in debug build.
        2. Assert successes of pthread_mutex_init() and pthread_mutex_destroy().

        * wtf/HashTable.h:
        (HashTable):
        (WTF::::HashTable):
        (WTF::::invalidateIterators):
        (WTF::addIterator):
        (WTF::removeIterator):
        * wtf/ThreadingPthreads.cpp:
        (WTF::Mutex::Mutex):
        (WTF::Mutex::~Mutex):

2012-05-02  Antti Koivisto  <antti@apple.com>

        Add temporary feature define for parsed stylesheet caching
        https://bugs.webkit.org/show_bug.cgi?id=85413

        Rubber-stamped by Nikolas Zimmermann.

        While not an externally visible feature this is still a significant internal change.
        It is good to have define in case someone has an urgent need to turn it off.
        
        Caching is enabled by default on all platforms. The define should be removed after some bake time.

        * wtf/Platform.h:

2012-05-02  Lauro Neto  <lauro.neto@openbossa.org>

        [Qt]r57240 broke Qt build (gcc bug)
        https://bugs.webkit.org/show_bug.cgi?id=37253

        Reviewed by Csaba Osztrogonác.
